styles.css
*{margin:0;
border:0;
padding:0;
font-family: Georgia, 'Times New Roman', Times, serif;
box-sizing: border-box;

} /*remove the default spaces*/



.profile-pic{
    width: 350px;
    height: 350px;
    border-radius: 50%;
    object-fit: cover;
    padding-top: 26px;
}

.header{
  margin:5px;
}



.header h2,
.header p {
  position: relative;
  z-index: 2;
  text-align: left;
}


.header h2 {
  font-size: 2em;
  margin-bottom: 2px;
  color: white;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
  padding-left:35px;
  padding-top:27px;
  
}

.header p {
  font-size: 1em;
  color: #4e9fd2;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
    padding-left:39px;
    margin-bottom: 10px;

}

body {
  background: #122042;
  color: #4e9fd2;
}


nav ul li{
 
  display:inline-block;
  position:relative;
  margin:0px 0px 3px 20px;
  font-size: 18px;
  font-weight: 900;
  list-style:none;
  z-index:20;
  color:white;

}
nav ul{
  display:flex;
  gap: 29px;
  list-style: none;
 
  align-items:left;
   background: #060b16;
    border-radius: 32px;
    border-width: 716px;
    height:46px;
   padding:-4px;
}

.right-box{
  position: fixed;
  top: 16px;
  left: 2px;
  display: flex;
 
  align-items: right;
  padding: 4px 200px;


}
nav ul li a{
  color: white;
  z-index:200;
   top: 4px;
    
  
 
   gap:10px;

}

nav ul li a{
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
  font-size: 21px;
  font-weight: 900;
  text-decoration: none;
  gap:100px;


  position:relative;
}

nav ul li a::after{
  content:' ';
  width:0;
  height:7px;
  left:0px;
  bottom:-10px;
  background: #4e9fd2;
  position:absolute;
  border-radius: 12px;
  transition:0.35s;
}
nav ul li a:hover::after{
  width:100%;
}



#left-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin:-9;
  height: 480px;
  width: 100%;
}
#top-box{
  display:flex;
  flex-direction: row;
  background-image: url(images/tech-bg.jpg);
  background-size: cover;
  position: relative;
  padding: 16px;
  z-index: 1;
}

#top-box::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: 1;
}
#top-box > *{
  position:relative;
  z-index:2;
}

